WISH: anyevent mouse notification / manage MotionMask better.
WISH: just for fun, do shade and tint with XRender.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

	- SYNCCVS: updated to rxvt-cvs 2006-01-28, no relevant changes.
        - fix version report (DA) (which was unfortunately broken).

7.4  Sat Jan 28 15:26:27 CET 2006
	- screen background wasn't always erased properly when scrolling,
        - re-enabled clearing optimisation disabled in 7.4pre.
        - small configure updates for libptytty.
        - fixed version options: line output.
	- removed stoopid debugging message left in the code.

7.3  Wed Jan 25 22:47:35 CET 2006
        - don't let iso14755 or mouse reporting get into the way of perl
          (could lead to global grabs never being cleared).
        - experimental OnTheSpot editing support (-pe xim-onthespot).
        - moved Shift-Button2 paste combination to Meta-Button2.
        - the cutchars resource will now be respected and used by the
          selection extension.
        - added the "remote-clipboard" extension which just runs external
          commands to fetch and store the selection data.
        - added -depth switch that tries to get a different visual depth
          than the default (replaces the old PREFER_24_BIT logic).
        - removed (unused) arabic presentation form composing sequences.
        - be more strict when deciding that a core font glyph is too wide and
          needs the careful rendering mode.
        - allow more leeway for italic fonts when deciding that a character is
          too wide and needs careful mode.
        - redraw even more characters around characters using careful mode.
        - made selection-pastebin fully asynchronous.
        - reduced number of server turnarounds at startup by allocating
          atoms only once per display.
        - renamed on_keyboard_command to on_user_command.