@@ -14,6 +14,8 @@ DUMB: support tex fonts
 
 	- SYNCCVS: updated to rxvt-cvs 2006-01-28, no relevant changes.
         - fix version report (DA) (which was unfortunately broken).
+        - changed version number report again, now to emulate xterm.
+        - added the OSC sequence 702 to detect the urxvt version number.
 
 7.4  Sat Jan 28 15:26:27 CET 2006
 	- screen background wasn't always erased properly when scrolling,
